fix: image was overlapping navbar

--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -64,3 +64,7 @@
   justify-content: center;
   margin-top: 1rem;
 }
+
+.image {
+  z-index: 1;
+}
