--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -8,6 +8,7 @@
 
   height: 3.51rem;
   background-color: white;
+  z-index: 2;
 }
 
 .nav_Ul {
